--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 a:hover {
-  color: #9b2369;
+  color: #2d8140;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -39,7 +39,7 @@ a:hover {
 }
 
 .color-a {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .color-d {
@@ -90,7 +90,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #9b2369;
+  background-color: #2d8140;
 }
 
 .overlay-mf {
@@ -160,7 +160,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #9b2369;
+  background-color: #2d8140;
   margin: 0 auto;
 }
 
@@ -179,7 +179,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #9b2369;
+  background-color: #2d8140;
   width: 100px;
   bottom: -12px;
 }
@@ -216,12 +216,12 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #9b2369;
+  box-shadow: 0 0 0 3px #2d8140;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #9b2369;
+  background-color: #2d8140;
   color: #fff;
   box-shadow: 0 0 0 3px #e2cbde;
   transition: all 500ms ease;
@@ -246,7 +246,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #9b2369;
+  color: #2d8140;
   margin-right: 10px;
 }
 
@@ -260,7 +260,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #9b2369;
+  box-shadow: 0 0 0 10px #2d8140;
   display: block;
 }
 
@@ -307,7 +307,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #9b2369;
+  background-color: #2d8140;
   opacity: .7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -326,7 +326,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #9b2369;
+  background: #2d8140;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -364,7 +364,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #9b2369;
+  border-top: 6px solid #2d8140;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -481,26 +481,26 @@ a:hover {
 }
 
 .navbar-b.navbar-reduce .nav-link {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #9b2369;
+  background-color: #2d8140;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .navbar-b.navbar-reduce .show > .nav-link,
 .navbar-b.navbar-reduce .active > .nav-link,
 .navbar-b.navbar-reduce .nav-link.show,
 .navbar-b.navbar-reduce .nav-link.active {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .navbar-b.navbar-reduce .navbar-brand {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
@@ -532,13 +532,13 @@ a:hover {
 }
 
 .navbar-b .dropdown-menu .dropdown-item:hover {
-  background-color: #9b2369;
+  background-color: #2d8140;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .navbar-b .dropdown-menu .dropdown-item.active {
-  background-color: #9b2369;
+  background-color: #2d8140;
 }
 
 /*--/ Hamburger Navbar /--*/
@@ -652,7 +652,7 @@ a:hover {
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
@@ -689,7 +689,7 @@ a:hover {
 }
 
 .skill-mf .progress {
-  background-color: #e2cbde;
+  background-color: #c9ddcb;
   margin: .5rem 0 1.2rem 0;
   border-radius: 0;
   height: .7rem;
@@ -697,7 +697,7 @@ a:hover {
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #9b2369;
+  background-color: #2d8140;
 }
 
 /*======================================
@@ -714,7 +714,7 @@ a:hover {
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #9b2369;
+  background-color: #2d8140;
   box-shadow: 0 0 0 10px #e2cbde;
 }
 
@@ -799,17 +799,17 @@ a:hover {
 }
 
 .work-content .w-more .w-ctegory {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #9b2369;
+  color: #2d8140;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .work-content .w-like .num-like {
@@ -852,7 +852,7 @@ a:hover {
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #9b2369;
+  color: #2d8140;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -885,7 +885,7 @@ a:hover {
   color: #fff;
   padding: 0 15px 5px;
   overflow: hidden;
-  background-color: #9b2369;
+  background-color: #2d8140;
   border-radius: 4px;
 }
 
@@ -939,7 +939,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul {
-  border-left: 4px solid #9b2369;
+  border-left: 4px solid #2d8140;
   margin-top: 1rem;
 }
 
@@ -949,7 +949,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul a {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .blog-wrapper .post-meta ul span {
@@ -957,7 +957,7 @@ a:hover {
 }
 
 .blog-wrapper .blockquote {
-  border-left: 4px solid #9b2369;
+  border-left: 4px solid #2d8140;
   padding: 18px;
   font-style: italic;
 }
@@ -989,7 +989,7 @@ a:hover {
 }
 
 .box-comments .list-comments a {
-  color: #9b2369;
+  color: #2d8140;
 }
 
 .box-comments .list-comments span {
@@ -1006,7 +1006,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
-  border-left: 5px solid #9b2369;
+  border-left: 5px solid #2d8140;
   padding-left: 15px;
   text-transform: uppercase;
   margin-bottom: 1.5rem;
@@ -1023,7 +1023,7 @@ a:hover {
   width: 10px;
   height: 1px;
   left: 0;
-  background-color: #9b2369;
+  background-color: #2d8140;
   top: 20px;
 }
 
@@ -1034,8 +1034,8 @@ a:hover {
 }
 
 .sidebar-search .btn-search {
-  background-color: #9b2369;
-  border-color: #9b2369;
+  background-color: #2d8140;
+  border-color: #2d8140;
   border-radius: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -1043,7 +1043,7 @@ a:hover {
 
 .widget-tags ul li {
   display: inline-block;
-  background-color: #9b2369;
+  background-color: #2d8140;
   padding: .2rem .6rem;
   margin-bottom: .5rem;
   border-radius: 15px;
@@ -1092,8 +1092,8 @@ footer .credits a {
 ======================================*/
 
 #sendmessage {
-  color: #9b2369;
-  border: 1px solid #9b2369;
+  color: #2d8140;
+  border: 1px solid #2d8140;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1156,7 +1156,7 @@ footer .credits a {
 }
 
 .button-a {
-  background-color: #9b2369;
+  background-color: #2d8140;
   color: #fff;
   border-color: #e2cbde;
 }
